--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,45 +7,36 @@
     tools:context=".activity.MainActivity">
 
     <CheckBox
-        android:id="@+id/bypassSensitive"
+        android:id="@+id/forceVertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="7dp"
-        android:layout_marginTop="302dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="348dp"
         android:checked="false"
-        android:text="绕过屏蔽词(需要重新登陆以生效)(理性使用!)"
+        android:text="强制竖屏(横屏真的很难用x)"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <CheckBox
-        android:id="@+id/showPeople"
+        android:id="@+id/autoRollcall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="7dp"
-        android:layout_marginTop="15dp"
-        android:text="显示在线人数(需要重新登陆以生效)(暂时我也不知道有什么用只是改了个变量x)"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:text="自动签到并保持认真(可以切到其它应用也不会被判定为不认真)"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bypassSensitive" />
-
-    <CheckBox
-        android:id="@+id/checkBox3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="7dp"
-        android:layout_marginTop="16dp"
-        android:text="自动签到(暂时还未完成你勾了也没用hh)"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/showPeople" />
+        app:layout_constraintTop_toBottomOf="@+id/forceVertical" />
 
     <EditText
         android:id="@+id/changeName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="130dp"
+        android:layout_height="46dp"
         android:layout_marginBottom="9dp"
+        android:autoLink="all"
         android:contentDescription="留空则不改."
         android:ems="10"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/bypassSensitive"
+        app:layout_constraintBottom_toTopOf="@+id/forceVertical"
         app:layout_constraintStart_toEndOf="@+id/textView2" />
 
     <TextView
@@ -60,8 +51,10 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/textView2"
@@ -71,5 +64,26 @@
         android:text="改名(不改请留空)(需要重新登陆以生效): "
         app:layout_constraintBaseline_toBaselineOf="@+id/changeName"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="64dp"
+        android:text="Github链接(一定要看!): "
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="4dp"
+        android:text="https://github.com/lyc8503/VizpowerHook"
+        app:layout_constraintStart_toStartOf="@+id/introduction"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
