--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,69 +7,90 @@
     tools:context=".activity.MainActivity">
 
     <CheckBox
-        android:id="@+id/bypassSensitive"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="7dp"
-        android:layout_marginTop="302dp"
+        android:id="@+id/forceVertical"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:checked="false"
-        android:text="绕过屏蔽词(需要重新登陆以生效)(理性使用!)"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="强制竖屏 (横屏真的很难用 x)(不开启可能对发送图片功能有影响...)"
+        app:layout_constraintBottom_toTopOf="@+id/autoRollcall"
+        app:layout_constraintEnd_toEndOf="@+id/autoRollcall"
+        app:layout_constraintStart_toStartOf="@+id/autoRollcall"
+        app:layout_constraintTop_toBottomOf="@+id/changeName" />
 
     <CheckBox
-        android:id="@+id/showPeople"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="7dp"
-        android:layout_marginTop="15dp"
-        android:text="显示在线人数(需要重新登陆以生效)(暂时我也不知道有什么用只是改了个变量x)"
+        android:id="@+id/autoRollcall"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="4dp"
+        android:text="自动签到并保持认真 (可以切到其它应用也不会被判定为不认真)"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/changeName"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bypassSensitive" />
-
-    <CheckBox
-        android:id="@+id/checkBox3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="7dp"
-        android:layout_marginTop="16dp"
-        android:text="自动签到(暂时还未完成你勾了也没用hh)"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/showPeople" />
+        app:layout_constraintTop_toBottomOf="@+id/forceVertical" />
 
     <EditText
         android:id="@+id/changeName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="9dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="37dp"
+        android:layout_marginBottom="13dp"
+        android:autoLink="all"
         android:contentDescription="留空则不改."
         android:ems="10"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/bypassSensitive"
-        app:layout_constraintStart_toEndOf="@+id/textView2" />
+        app:layout_constraintBottom_toTopOf="@+id/forceVertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <TextView
         android:id="@+id/introduction"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="14dp"
+        android:layout_width="315dp"
+        android:layout_height="283dp"
+        android:layout_marginStart="12dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="14dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginBottom="9dp"
         android:text="@string/introduction"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView2"
+        android:layout_width="152dp"
+        android:layout_height="44dp"
+        android:layout_marginStart="14dp"
+        android:text="改名 (不改请留空)(需要重新登陆以生效):"
+        app:layout_constraintBaseline_toBaselineOf="@+id/changeName"
+        app:layout_constraintEnd_toStartOf="@+id/changeName"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="14dp"
-        android:text="改名(不改请留空)(需要重新登陆以生效): "
-        app:layout_constraintBaseline_toBaselineOf="@+id/changeName"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_marginStart="12dp"
+        android:layout_marginBottom="9dp"
+        android:text="Github 链接 (一定要看！):"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        app:layout_constraintBottom_toTopOf="@+id/textView3"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/introduction" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:layout_marginBottom="11dp"
+        android:autoLink="all"
+        android:text="https://github.com/lyc8503/VizpowerHook"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        app:layout_constraintBottom_toTopOf="@+id/changeName"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
